--- a/app/views/apts/_form.html.erb
+++ b/app/views/apts/_form.html.erb
@@ -31,7 +31,7 @@
     <%= f.text_area :body %>
   </div>
 
-    <%= render "shared/fileupload" %>
+    <%#= render "shared/fileupload" %>
 
   <div class="actions">
     <%= f.submit %>
