multiple upload and calendar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,10 @@
  *= require fullcalendar
  *= require_tree .
  */
+
+.selected-date {
+	background-color: #3399FF;
+	height: 35px;
+	width: 44px;
+	color:white;
+}
