--- a/app/views/apts/show.html.erb
+++ b/app/views/apts/show.html.erb
@@ -10,7 +10,7 @@
         <%= @date.strftime("%B %Y") %>
         <%= link_to ">", date: @date.months_since(4) %>
       </h2>
-      <%= calendar @date do |date| %>
+      <%= calendar @date, @reservations do |date| %>
         <%= date.day %>
           <% if @reservations_by_start_date[date] %>
               <% @reservations_by_start_date[date].each do |reservation| %>
@@ -20,7 +20,7 @@
       <% end %>
 
       <h2 class="month"><%= @date.months_since(1).strftime("%B %Y") %></h2>
-      <%= calendar @date.months_since(1) do |date| %>
+      <%= calendar @date.months_since(1), @reservations do |date| %>
           <%= date.day %>
           <% if @reservations_by_start_date[date] %>
               <% @reservations_by_start_date[date].each do |reservation| %>
@@ -30,7 +30,7 @@
       <% end %>
 
       <h2 class="month"><%= @date.months_since(2).strftime("%B %Y") %></h2>
-      <%= calendar @date.months_since(2) do |date| %>
+      <%= calendar @date.months_since(2), @reservations do |date| %>
           <%= date.day %>
           <% if @reservations_by_start_date[date] %>
               <ul class="reserved">
@@ -42,7 +42,7 @@
       <% end %>
 
       <h2 class="month"><%= @date.months_since(3).strftime("%B %Y") %></h2>
-      <%= calendar @date.months_since(3) do |date| %>
+      <%= calendar @date.months_since(3), @reservations do |date| %>
           <%= date.day %>
           <% if @reservations_by_start_date[date] %>
               <ul class="reserved">
