make images list sortable

--- a/app/views/shared/fileupload/_js_include_local.html
+++ b/app/views/shared/fileupload/_js_include_local.html
@@ -16,6 +16,11 @@
           $("#apt_picture_ids").val(new_val);
         });
 
+        $(".files").sortable({
+          items: 'tr',
+        });
+
+
         // Enable iframe cross-domain access via redirect option:
         $('#fileupload').fileupload(
                 'option',
